@@ -15,8 +15,9 @@ library("future")
 options(warnPartialMatchArgs=FALSE)
 oopts <- options(mc.cores=2L, warn=1L, digits=3L)
 strategies <- future:::supportedStrategies()
-strategies <- setdiff(strategies, "multiprocess")
-if (require("future.BatchJobs")) strategies <- c(strategies, "batchjobs")
+strategies <- setdiff(strategies, c("multiprocess", "lazy", "eager"))
+if (require("future.BatchJobs")) strategies <- c(strategies, "batchjobs_local")
+if (require("future.batchtools")) strategies <- c(strategies, "batchtools_local")
 strategies <- getOption("doFuture.tests.strategies", strategies)
 
 library("doFuture")
